changed the chrome extension url

--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -120,7 +120,7 @@
   </div>
   <nav class="nav">
     <a href="#" id="open-learnspace">Open folder</a>
-    <a href="http://localhost:3457" target="_blank">View database</a>
+    <a href="http://localhost:3000/dashboard" target="_blank">View database</a>
   </nav>
   <p class="hint">Save links to learnspace—bookmark or paste above.</p>
   <script src="popup.js"></script>
