--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -5,25 +5,54 @@
   <style>
     * { box-sizing: border-box; }
     body {
-      width: 300px;
-      padding: 24px 20px 20px;
+      width: 320px;
+      min-height: 340px;
+      padding: 0;
       margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Segoe UI", sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
       font-size: 14px;
-      color: #1d1d1f;
-      background:
-        radial-gradient(ellipse 120% 100% at 10% 10%, rgba(180,182,188,0.25) 0%, transparent 55%),
-        radial-gradient(ellipse 100% 120% at 90% 85%, rgba(170,172,178,0.2) 0%, transparent 50%),
-        radial-gradient(ellipse 140% 80% at 50% 30%, rgba(175,177,182,0.15) 0%, transparent 45%),
-        #f5f5f7;
-      letter-spacing: -0.01em;
+      color: rgba(23, 23, 23, 0.85);
+      background: #d0d0d0;
+      letter-spacing: 0.01em;
+      position: relative;
+      overflow: hidden;
     }
-    h1 {
-      font-size: 21px;
+    /* Subtle gradient overlay - matches site feel */
+    body::before {
+      content: '';
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+      background:
+        radial-gradient(ellipse 100% 80% at 50% 0%, rgba(255,255,255,0.15) 0%, transparent 50%),
+        radial-gradient(ellipse 80% 60% at 80% 100%, rgba(30,30,30,0.06) 0%, transparent 45%),
+        radial-gradient(ellipse 60% 80% at 10% 90%, rgba(30,30,30,0.05) 0%, transparent 45%);
+    }
+    .wrap {
+      position: relative;
+      z-index: 1;
+      padding: 24px 20px 20px;
+    }
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin-bottom: 22px;
+    }
+    .brand img {
+      width: 32px;
+      height: 32px;
+      flex-shrink: 0;
+    }
+    .brand h1 {
+      font-size: 22px;
       font-weight: 600;
-      margin: 0 0 20px 0;
-      color: #1d1d1f;
+      margin: 0;
+      color: rgba(23, 23, 23, 0.9);
       letter-spacing: -0.02em;
+    }
+    .brand h1 .dot {
+      color: #e07850;
     }
     .add-link {
       margin-bottom: 20px;
@@ -35,41 +64,44 @@
       border-radius: 10px;
       font-size: 14px;
       font-family: inherit;
-      background: rgba(0,0,0,0.04);
-      color: #1d1d1f;
+      background: rgba(255, 255, 255, 0.5);
+      color: #171717;
       transition: background 0.2s ease;
     }
     .add-link input::placeholder {
-      color: #86868b;
+      color: rgba(115, 115, 115, 0.9);
     }
     .add-link input:focus {
       outline: none;
-      background: rgba(0,0,0,0.06);
+      background: rgba(255, 255, 255, 0.7);
     }
     .add-link button {
       width: 100%;
-      margin-top: 8px;
+      margin-top: 10px;
       padding: 10px 16px;
       border: none;
-      border-radius: 10px;
-      font-size: 14px;
+      border-radius: 0;
+      font-size: 13px;
       font-weight: 500;
       font-family: inherit;
-      background: #1d1d1f;
+      background: #e07850;
       color: #fff;
       cursor: pointer;
-      transition: opacity 0.2s ease, transform 0.1s ease;
+      letter-spacing: 0.15em;
+      text-transform: uppercase;
+      transition: filter 0.2s ease, transform 0.1s ease;
     }
     .add-link button:hover {
-      opacity: 0.88;
+      filter: brightness(1.1);
     }
     .add-link button:active {
       transform: scale(0.98);
     }
     .add-link button:disabled {
-      opacity: 0.5;
+      opacity: 0.6;
       cursor: not-allowed;
       transform: none;
+      filter: none;
     }
     .add-link .msg {
       font-size: 12px;
@@ -77,52 +109,72 @@
       font-weight: 500;
     }
     .add-link .msg.success { color: #34c759; }
-    .add-link .msg.error { color: #ff3b30; }
+    .add-link .msg.error { color: #c0392b; }
     .nav {
       display: flex;
       flex-direction: column;
-      gap: 2px;
+      gap: 0;
     }
     .nav a {
       display: block;
       padding: 10px 0;
       text-decoration: none;
-      color: #1d1d1f;
-      font-size: 15px;
+      color: rgba(23, 23, 23, 0.7);
+      font-size: 12px;
       font-weight: 500;
-      opacity: 0.9;
-      transition: opacity 0.15s ease, color 0.15s ease;
-      border-bottom: none;
+      letter-spacing: 0.2em;
+      text-transform: uppercase;
+      transition: color 0.2s ease;
+      position: relative;
     }
     .nav a:hover {
-      opacity: 1;
-      color: #0071e3;
+      color: rgba(23, 23, 23, 0.95);
     }
-    .nav a:active {
-      opacity: 0.8;
+    .nav a:hover::after {
+      width: 100%;
+    }
+    .nav a::after {
+      content: '';
+      position: absolute;
+      bottom: 8px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: #e07850;
+      transition: width 0.3s ease;
     }
     .hint {
       font-size: 12px;
-      color: #86868b;
+      color: rgba(23, 23, 23, 0.55);
       margin-top: 16px;
-      padding-top: 16px;
-      border-top: 1px solid rgba(0,0,0,0.06);
+      padding-top: 14px;
+      border-top: 1px solid rgba(0, 0, 0, 0.08);
       line-height: 1.4;
+      letter-spacing: 0.02em;
+    }
+    ::selection {
+      background-color: rgba(224, 120, 80, 0.3);
+      color: inherit;
     }
   </style>
 </head>
 <body>
-  <h1>Learnspace</h1>
-  <div class="add-link">
-    <input type="url" id="url-input" placeholder="Paste a link" />
-    <button type="button" id="add-btn">Add</button>
-    <div class="msg" id="add-msg"></div>
+  <div class="wrap">
+    <div class="brand">
+      <img src="learnspacelogo.svg" alt="" />
+      <h1>Learnspace<span class="dot">.</span></h1>
+    </div>
+    <div class="add-link">
+      <input type="url" id="url-input" placeholder="Paste a link" />
+      <button type="button" id="add-btn">Add</button>
+      <div class="msg" id="add-msg"></div>
+    </div>
+    <nav class="nav">
+      <a href="#" id="open-learnspace">Open folder</a>
+      <a href="http://localhost:3000/dashboard" target="_blank">Developer dashboard</a>
+    </nav>
+    <p class="hint">Save links to learnspace—bookmark or paste above.</p>
   </div>
-  <nav class="nav">
-    <a href="#" id="open-learnspace">Open folder</a>
-    <a href="http://localhost:3000/dashboard" target="_blank">View database</a>
-  </nav>
-  <p class="hint">Save links to learnspace—bookmark or paste above.</p>
   <script src="popup.js"></script>
 </body>
 </html>
